--- a/_posts/2021-11-18-homily.md
+++ b/_posts/2021-11-18-homily.md
@@ -7,7 +7,7 @@ bonstetten: true
 first_reading: 마카베오기 상권 2,15-29
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=120&p=2 
 gospel: 루카 19,41-44
-gospel_link: gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=19
+gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=19
 
 ---
  
