--- a/_posts/2020-1-26-homily.md
+++ b/_posts/2020-1-26-homily.md
@@ -16,4 +16,6 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 그 곳에서 예수님께서 하신 말씀은 “나를 따르라.”였습니다.
 한국인이냐 독일인이냐 아니면 스위스인이냐 하는 것은 크게 중요하지 않습니다. 중요한 것은 진정한 그리스도인인가 입니다.
 
-부모님들이 자식을 한국인으로 키워야 할 지, 스위스 인으로 키워야 할 지의 고민에 대해 생각해 볼 때 예수님의 말씀을 적용해 본다면 자녀를 바른 그리스도인으로 키우는 것이 해결책입니다. 자녀를 예수님을 따르도록 키웁시다. 그 때 자녀는 훌륭한 한국인 혹은 스위스인이 됩니다.
+부모님들이 자식을 한국인으로 키워야 할 지, 스위스인으로 키워야 할 지의 고민에 대해 생각해 볼 때 예수님의 말씀을 적용해 본다면 자녀를 바른 그리스도인으로 키우는 것이 해결책입니다. 자녀를 예수님을 따르도록 키웁시다. 그 때 자녀는 훌륭한 한국인 혹은 스위스인이 됩니다.
+
+참고자료: <a href="https://maria.catholic.or.kr/bible/bbs/bbs_view.asp?id=150706&SORT=R&ref=3835&menu=4797">카파르나움 (가버나움)</a>
