--- a/_posts/2021-5-23-mary.md
+++ b/_posts/2021-5-23-mary.md
@@ -18,7 +18,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 예수님이 제자들을 처음 만나셨을 때 하신 말씀이 <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=1">마르코 1장 17절</a>에 따르면 ‘내 뒤로 오너라. 그리고 나를 따라라.’ 였습니다. 그러나 이제는 마지막 하신 말씀이 <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=28">마태오 28장 19절</a>에 따르면 ‘가거라.’ 라고 말씀하십니다. <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=20">요한복음</a>에서는 ‘나는 너희를 보낸다.’ 라고 말씀 하십니다. 성령을 받았는지 못 받았는지의 잣대가 있습니다. 이는 파견된 삶을 사는가, 내가 예수님을 선포하는 깨어 있는 삶을 사는가 아니면 끌려가는 삶을 사는가 입니다.
 
-주님은 제자들에게 «성령을 받아라. 너희가 용서하면 용서를 받을 것이고 아니면 그대로 남아 있을 것이다.» 라고 말씀하셨습니다. 주님이 성령을 받아라 하셨지만 제자들은 아직 받지 못했습니다. 여드레가 지나서도 문을 잠궈놓고 두려워하고 있었습니다. 그러나 주신다고 다 받는 것이 아닙니다. 준비가 되어 있어야 받을 수 있습니다. 제자들은 «예.» 라고 답하지 않았습니다. 답이 없으면 못 받습니다.
+오늘 복음에서, 주님은 제자들에게 «성령을 받아라. 너희가 용서하면 용서를 받을 것이고 아니면 그대로 남아 있을 것이다.» 라고 말씀하셨습니다. 주님이 성령을 받아라 하셨지만 제자들은 아직 받지 못했습니다. 여드레가 지나서도 문을 잠궈놓고 두려워하고 있었습니다. 그러나 주신다고 다 받는 것이 아닙니다. 준비가 되어 있어야 받을 수 있습니다. 제자들은 «예.» 라고 답하지 않았습니다. 답이 없으면 못 받습니다.
 
 반면, 이 복음의 시작에 성령을 ‘예’ 하고 받은 사람이 있었습니다. 바로 ‘성모님’ 입니다. 14세 정도 되는 소녀가 앞으로 자신에게 닥칠 운명을 듣고 ‘예.’ 라고 대답했습니다. 그 뒤로 성령님을 통해 예수님을 잉태하셨습니다.
 
