--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -30,7 +30,7 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 들으시는 내용은 여러분들에게 피와 살이 될 것입니다. 그리고 다시는 우울증에 빠지지
 않을 것이고 다시는 죽은 이들 가운데 있지 않을 것입니다.
 
-제가 어느 날 장례식을 치를 가정을 방문하였습니다. 장례식 준비를 관련해서 이런 저런
+제가 어느 날 장례식을 치를 가정을 방문하였습니다. 장례식 준비와 관련해서 이런 저런
 이야기를 나누고 있었습니다. 그런데 과부가 된 80 세의 할머니께서 서럽게 울기
 시작하신 것입니다. 사실 그런 경우는 많지 않고 특히 스위스에서는 별로 없습니다.
 그러나 제가 프로 아닙니까. 그래서 제가 위로를 하기 시작했습니다. 예수님은 죽었다가
