--- a/_posts/2020/2020-4-12-bird.md
+++ b/_posts/2020/2020-4-12-bird.md
@@ -13,7 +13,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 ---
 
-마음에 품고 있었던 큰 희망이 사라졌다는 것을 확인하는 순간 절망이 시작됩니다. 사도 베드로와 요한, 그리고 마리아 막달레나의 이 절망을 체험합니다. 이들은 주님의 시신이 사라졌다는 소식을 접하고 놀라 무덤으로 달려갑니다. 그리고 모두 “몸을 숙여” 무덤 안을 바라보고 슬퍼하고 절망합니다.
+마음에 품고 있었던 큰 희망이 사라졌다는 것을 확인하는 순간 절망이 시작됩니다. 사도 베드로와 요한, 그리고 마리아 막달레나는 이 절망을 체험합니다. 이들은 주님의 시신이 사라졌다는 소식을 접하고 놀라 무덤으로 달려갑니다. 그리고 모두 “몸을 숙여” 무덤 안을 바라보고 슬퍼하고 절망합니다.
 
 이게 그리스도가 원하시는 게 아닐까요? 몸을 숙여 절망을 직시하는 것 말입니다. 이 쓰디쓴 시간이 지난 후 부활하신 주님께서는 당신의 모습을 보여주십니다. 몸을 숙이기 전에, 내려가기 전에는 위로 올라갈 수 없는 게 부활의 원칙인 것 같습니다.
 
