--- a/_posts/2023/2023-3-26-lazarus.md
+++ b/_posts/2023/2023-3-26-lazarus.md
@@ -25,5 +25,5 @@ tags: 사순
 
 성체 전 말씀> 우리가 슬퍼해야 할 상황에서 마땅히 슬퍼하고 그것을 기념하십시오. 그리고 그 슬픔을 승화시키는 것입니다. 그것이 바로 전례입니다. 이것인 인간만이 유일하게 할 수 있는 것입니다. 그리스도의 수난을 슬퍼하고 기념하며 이것을 승화시킵시다.
 
-3분 교리> 다음 주일은 <a href="https://maria.catholic.or.kr/mobile/dictionary/term/term_view.asp?ctxtIdNum=2513&keyword=%EC%84%B1%EC%A7%80%EC%A3%BC%EC%9D%BC&gubun=01&group=all">성지 주일</a>입니다. <a href="https://maria.catholic.or.kr/mobile/dictionary/term/term_view.asp?ctxtIdNum=1816&keyword=%EC%84%B1%EC%A7%80&gubun=01&group=all">성지</a>는 성지 가지에서 나온 말인데, 이 성지 가지를 받으면 1년 동안 잘 보관해놓으시고 그 뒤에 성당에 반납하면 그 성지를 태워서 재로 만들어 재의 수요일에 재를 바릅니다. 성지 주일이 지나면 <a href="https://maria.catholic.or.kr/mobile/dictionary/term/term_view.asp?ctxtIdNum=1813&keyword=%EC%84%B1%EC%A7%80&gubun=01&group=all">성주간</a>이 됩니다. 성주간 목요일부터 금요일, 성 토요일 3일 동안 스스로를 점검합시다. 이 3 일동안 열심히 기도를 드리시면 큰 은총을 받으시고 그 힘으로 1년을 살아갈 수 있습니다. 저도 그러합니다. 만일 성 주간 미사 참여가 어려우신 분들은 제가 몇가지를 추천해드립니다. <a href="https://www.youtube.com/watch?v=QkTzr9wG2C4">요한 수난곡</a> 그리고 <a href="https://www.youtube.com/watch?v=PkZW7hbdaGk">마태 수난곡</a>을 들어보세요. 성주간 때 성 금요일에 큰 대성당에서 이 수난곡을 연주하며 부릅니다. 그리고 참고로 성 목요일 저녁부터 부활절까지 한 묶음인데 이 시기 동안 금지된 것이 있습니다. 바로 <a href="https://www.bb4c.or.kr/bbs/board.php?bo_table=councelling&wr_id=75">악기 연주가 금지되어 있습니다</a>. 노래는 가능합니다. 부활 전야 때 대영광송을 시작으로 오르간이 연주를 비로소 시작합니다.
+3분 교리> 다음 주일은 <a href="https://maria.catholic.or.kr/mobile/dictionary/term/term_view.asp?ctxtIdNum=2513&keyword=%EC%84%B1%EC%A7%80%EC%A3%BC%EC%9D%BC&gubun=01&group=all">성지 주일</a>입니다. <a href="https://maria.catholic.or.kr/mobile/dictionary/term/term_view.asp?ctxtIdNum=1816&keyword=%EC%84%B1%EC%A7%80&gubun=01&group=all">성지</a>는 성지 가지에서 나온 말인데, 이 성지 가지를 받으면 1년 동안 잘 보관해놓으시고 그 뒤에 성당에 반납하면 그 성지를 태워서 재로 만들어 재의 수요일에 재를 바릅니다. 성지 주일이 지나면 <a href="https://maria.catholic.or.kr/mobile/dictionary/term/term_view.asp?ctxtIdNum=1813&keyword=%EC%84%B1%EC%A7%80&gubun=01&group=all">성주간</a>이 됩니다. 성주간 목요일부터 금요일, <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1859&keyword=%EC%A0%9C3%EB%8F%85%EC%84%9C&gubun=01">성토요일</a> 3일 동안 스스로를 점검합시다. 이 3 일동안 열심히 기도를 드리시면 큰 은총을 받으시고 그 힘으로 1년을 살아갈 수 있습니다. 저도 그러합니다. 만일 성 주간 미사 참여가 어려우신 분들은 제가 몇가지를 추천해드립니다. <a href="https://www.youtube.com/watch?v=QkTzr9wG2C4">요한 수난곡</a> 그리고 <a href="https://www.youtube.com/watch?v=PkZW7hbdaGk">마태 수난곡</a>을 들어보세요. 성주간 때 성 금요일에 큰 대성당에서 이 수난곡을 연주하며 부릅니다. 그리고 참고로 성 목요일 저녁부터 부활절까지 한 묶음인데 이 시기 동안 금지된 것이 있습니다. 바로 <a href="https://www.bb4c.or.kr/bbs/board.php?bo_table=councelling&wr_id=75">악기 연주가 금지되어 있습니다</a>. 노래는 가능합니다. 부활 전야 때 대영광송을 시작으로 오르간이 연주를 비로소 시작합니다.
 그 다음 추천 드리는 바는 <a href="https://www.youtube.com/watch?v=hwDCAvoPXOU">모짜르트의 레퀴엠</a>을 들으십시오. 모짜르트는 죽어가면서 이 작품을 썼습니다. 그렇게 자신의 고통을 승화시켰던 것입니다.
