--- a/_posts/2023/2023-5-14-homily.md
+++ b/_posts/2023/2023-5-14-homily.md
@@ -2,7 +2,7 @@
 
 title:  부활 제6주일
 layout: post 
-image:  
+image:  2023_5_14.jpg
 first_reading:  사도행전 8,5-8.14-17
 first_reading_link: m=2&n=151&p=8
 second_reading:  베드로 1서 3,15-18
