--- a/_posts/2023/2023-5-14-homily.md
+++ b/_posts/2023/2023-5-14-homily.md
@@ -23,3 +23,18 @@ gospel_link: m=2&n=150&p=14
 이번 휴가 때 보문역에서 1111번을 타고 성북동사무소으로 향했습니다. 15분이면 도달하는 짧은 거리입니다. 뒷문 바로 앞에 한 젊은 어머니와 십대 초반으로 보이는 딸이 타고 있더군요. 그 여자아이는 지적장애가 있는 것으로 보였습니다. 그런데 이 아이가 엄마에게 질문을 던지기 시작하더군요. 15분 동안 한 100개의 질문을 던지는 것 같았습니다. 물론 말도 안 되는 질문들이었습니다. 그러면 어머니는 어떻게 하셨을까요? 그 모든 질문들에 역시나 말도 안 되는 답들을 하시더군요. 하지만 지극한 친절과 인내로 정성껏 답해주시는 모습이 놀라웠습니다. 저는 이 어머니 안에서 두 가지 모습을 볼 수 있었습니다. 소소한 질문들에 재치있게 답해주는 동네 아주머니의 모습, 그리고 자신의 딸이 지녔던 큰 질문에 대한 답을 찾을 수 있도록 동반해 주는 성직자의 모습. 사실 딸의 수많은 작은 질문들 이면에는 큰 질문이 숨겨져 있었습니다. 이 아이가 궁극적으로 알고 싶고, 체험하고 싶었던 것이 있었습니다. 그것은 바로 어머니의 사랑입니다. 그렇지 않았을까요? 어머니의 날, 자녀된 마음으로 축하드리며 자녀들을 잘 동반하십사 부탁드립니다.
 
 성령도, 성직자도, 어머니도, 우리 모두는 즉흥적인 답을 주는 것 이상을 해내야 합니다. 그것은 바로 인내로이 함께 걷는 동반자의 역할입니다. 우리가 찾는 그 영원한 그 답에 도달할 때까지 말입니다. 그 답은 바로 그리스도입니다. 그리고 그리스도는 사랑이십니다. 아멘.
+
+3분 교리 >
+
+이번 목요일(5월 18일)은 주님승천대축일입니다. 그리고 열흘 뒤(5월 28일)에는 성령강림대축일입니다. 성령강림대축일을 준비하면서 9일기도 합니다. 여러분도 하세요. 5분 걸려요.
+
+오늘 제1독서에서, 제자들이 요한과 베드로가 이미 세례를 받은 신자들에게 가서, 기도를 합니다. 무슨 일이 일어났나요? 치유가 되고 성령이 옵니다. 성령을 청하는 기도를 따로 합니다. 가톨릭에서는 세례성사와 견진성사가 있습니다.
+성령을 청하는 성사인 견진성사가 있습니다.
+
+오늘, 형제님들이 정성과 힘을 다해 식사를 준비했습니다. 저는 그렇게 못 살 거든요. 기쁜 마음으로 식사를 합시다. 그 전에 샴페인을 따겠습니다. 최근 생신을 맞으신 루치아 자매님부터 나오세요 
+
+참고자료:
+
+<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=5743&keyword=&gubun=02">성령강림대축일</a> 
+
+<a href="https://m.mariasarang.net/book/bbs_view.asp?index=tagbbs_gido7&no=7">성령강림 9일기도 (5/19-5/27)</a> 
