--- a/_posts/2022/2022-12-25-homily.md
+++ b/_posts/2022/2022-12-25-homily.md
@@ -11,6 +11,7 @@ second_reading_link: m=2&n=165&p=1
 gospel: 요한 1,1-18 
 gospel_link: m=2&n=150&p=1
 tags: 성탄
+daily_missa: 20221225/15274
 daily_read: https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day=20221225&missaid=13790&missatype=DA#missa_02
 daily_listen: https://maria.catholic.or.kr/mi_pr/missa/missa.asp?menu=missa&missaid=13790&gomonth=2022-12-25&missatype=DA
 ---
