--- a/_posts/2023/2023-3-18-retreat.md
+++ b/_posts/2023/2023-3-18-retreat.md
@@ -89,7 +89,7 @@ tags: 사순
 <section>
  <h1> 4. 우리는 왜 우울함으로 많이 힘든가요? </h1>
 
-우리는 불안 짜증 스트레스로 인한 우울함을 존재에 의한 우울함으로 착각하기 때문입니다. 성경에서 우울함에 대해 읽으신 적이 있으십니까? 거의 없을 것입니다. 저는 한 대목 발견하였는데, 엘리야 예언자께서 우물가에 있는 여인에게 가, 밥을 달라고 청합니다. 이 여인은 집에 가진 것이 얼마 없어, 집에 남아 있는 밀가루와 기름이 다 떨어지고 나면 아들과 함께 죽으려고 했다고 말합니다. 그러면서 예언자에게 음식을 나누어드립니다. 그런데 기적이 일어납니다. 계속하여 밀가루와 기름이 생겨난 것입니다. <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=111&p=17">(열왕기상 17:12-16)</a>
+우리는 불안 짜증 스트레스로 인한 우울함을 존재에 의한 우울함으로 착각하기 때문입니다. 성경에서 우울함에 대해 읽으신 적이 있으십니까? 거의 없을 것입니다. 저는 한 대목 발견하였는데, 엘리야 예언자께서 우물가에 있는 여인에게 가, 밥을 달라고 청합니다. 이 여인은 집에 가진 것이 얼마 없어, 집에 남아 있는 밀가루와 기름이 다 떨어지고 나면 아들과 함께 죽으려고 했다고 말합니다. 그러면서 예언자에게 음식을 나누어드립니다. 그런데 기적이 일어납니다. 계속하여 밀가루와 기름이 생겨난 것입니다. <a href="https://bible.cbck.or.kr/Knb/1Kgs/17">(열왕기상 17:12-16)</a>
 <p>
 우리는 존재의 위기가 아닌데, 짜증나는 상황이 마치 존재의 위기인 것처럼 과장되게 받아들이기도 합니다. 이것은 현대사회의 새로운 병이 아닐까 합니다. 인간은 비극을 만들어냅니다. 객관적으로 보지 못하고 과대망상을 합니다. 우리는 후천적으로 마음이 약해진 것이 아닐까요? <a href="https://ko.wikipedia.org/wiki/%EB%8C%80%EC%A7%80_(%EC%86%8C%EC%84%A4)">펄벅 여사의 소설 대지</a>를 읽으면, 아이를 낳은 산모(오란)가 탯줄을 직접 끊고, 팥알을 아이에게 먹인 후, 바로 밭을 매러 나갑니다.
 <p>
