--- a/_posts/2022/2022-02-03-homily.md
+++ b/_posts/2022/2022-02-03-homily.md
@@ -1,7 +1,7 @@
 ---
 
 layout: post
-title: 연중 제4주간 목요일
+title: 연중 제4주간 목요일 (블라시오 성인 축일)
 bonstetten: true
 first_reading: 열왕기 상권 2,1-4.10-12
 first_reading_link: 1Kgs/2
@@ -22,3 +22,5 @@ gospel_link: Mk/6
 
 세례의 은총을 잊고 사는 사람들의 회개를 위해 기도합니다. 본인의 회개를 위해 기도하세요.
 그리고 그러한 <a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사 지향</a>을 저에게 신청해 주시면 좋겠습니다.
+
+참고자료: <a href="https://maria.catholic.or.kr/sa_ho/list/view.asp?menugubun=saint&ctxtSaintId=1099">블라시오 성인</a>
