--- a/future-dates/2023-05-28-homily.md
+++ b/future-dates/2023-05-28-homily.md
@@ -1,6 +1,6 @@
 ---
 
-title: 성령 강림 대축일(청소년 주일)
+title: 성령 강림 대축일 (청소년 주일)
 layout: post 
 first_reading: 사도행전 2,1-11
 first_reading_link: Acts/2
@@ -12,8 +12,15 @@ gospel_link: Jn/20
 
 ---
 
+3분교리 >
 
-실비아 자매님에게 일요일밤 doc으로 받으신
-강론말씀 문서에서
-텍스트를 여기에 넣으시고,
-이 파일을 _posts/2023 folder로 옮기시면 됩니다.
+<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1772&keyword=%EC%84%B1%EB%A0%B9+%EC%B9%A0%EC%9D%80&gubun=01">성령칠은</a>을 들어보셨나요? <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=3576&keyword=%EC%B9%A0%EC%84%B1%EC%82%AC&gubun=01">칠성사</a>나 덕에 대해서는 많이 들어보셨지만, 성령칠은은 별로 못 들어보셨을 것 같은데 무엇인지 알아봅시다. 첫번째로, 슬기가 있습니다. 슬기로운 사람은 시야가 넓어지고 활력이 있습니다. 그리하여 통달할 수 있습니다. 두번째 은사가 통달입니다. 통달한 사람은 사물을 깊이 인식할 수 있죠. 세번째 은사가 인식입니다. 네번째 은사가 지식입니다. 지식이 풍부하면 굳세집니다. 다섯번째 은사가 굳셈입니다. 굳셈 사람은 더 큰 강한 사람에게 굽히는 효경을 실천할 수 있습니다. 여섯번째 은사가 효경입니다. 그리고 이 효경과 겸손을 넘어서서 경외가 가능해집니다. 일곱번째 은사가 경외입니다. 약간 다른 번역도 가능합니다. 우리는 모두 이 성령칠은을 하나씩 갖고 있습니다.
+
+오늘이 교회가 탄생한 날입니다. 교회의 생일이지요. 가톨릭 교회를 위해 기도해 주세요. 
+
+참고 링크:
+
+산청 성심원: http://www.sungsim1.or.kr/?ckattempt=1
+
+양회동 씨(미카엘, 50)
+http://www.catholicnews.co.kr/news/articleView.html?idxno=33188
